--- a/css/styles.css
+++ b/css/styles.css
@@ -109,17 +109,65 @@ body {
     padding-left: 0;
 }
 
-.nav-item:not(:last-child),
-.address-item:not(:last-child) {
-    margin-right: 40px;
-}
-
 .nav-text {
+    position: relative;
     font-weight: var(--font-weight-h);
     line-height: var(--line-height-p);
     letter-spacing: var(--letter-spacing-p);
     color: var(--hero-color);
     text-decoration: none;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studio {
+    color: var(--hover-color);
+}
+
+.studio::after {
+    content: "";
+    position: absolute;
+    width: 48px;
+    height: 4px;
+    left: 0px;
+    top: 44px;
+    background: var(--hover-color);
+    border-radius: 2px;
+    /* display: none; */
+}
+
+
+/* .studio:hover::after,
+  .studio:focus::after {
+    display: block;
+  } */
+
+.portfolio {
+    color: var(--hover-color);
+}
+
+.portfolio::after {
+    content: "";
+    position: absolute;
+    width: 66px;
+    height: 4px;
+    left: 0px;
+    top: 44px;
+    background: var(--hover-color);
+    border-radius: 2px;
+    /* display: none; */
+}
+
+
+/* .portfolio:hover::after,
+  .portfolio:focus:after {
+    display: block;
+  } */
+
+.nav-item:not(:last-child),
+.address-item:not(:last-child) {
+    margin-right: 40px;
 }
 
 .address-list {
@@ -134,6 +182,9 @@ body {
     letter-spacing: var(--letter-spacing-p);
     color: var(--text-color);
     text-decoration: none;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-text:hover,
@@ -182,12 +233,15 @@ main {
     font-weight: var(--font-weight-h);
     line-height: var(--line-height-p);
     letter-spacing: var(--letter-spacing-h);
-    background: var(--links-color);
+    background-color: var(--links-color);
     color: var(--magic-color);
     border: 0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -210,12 +264,11 @@ main {
 }
 
 .featurs-icons {
-    width: 64px;
-    height: 64px;
-    /* padding: 24px 100px; */
+    width: 264px;
+    height: 112px;
+    padding: 24px 100px;
     background: var(--background-color);
     border-radius: 4px;
-    display: flex;
 }
 
 .featurs-direction {
@@ -335,6 +388,9 @@ main {
     height: 40px;
     border-radius: 50%;
     background-color: var(--links-color);
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icons:hover,
@@ -377,10 +433,16 @@ main {
     height: 88px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icons {
     fill: #8e8f99;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-items:hover .customers-icons,
@@ -391,7 +453,6 @@ main {
 .customers-items:hover,
 .customers-items:focus {
     border: 1px solid var(--hover-color);
-    border-radius: 4px;
 }
 
 
@@ -470,6 +531,9 @@ main {
     padding: 8px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .foot-icons:hover,
@@ -499,10 +563,11 @@ main {
     text-align: center;
     letter-spacing: var(--letter-spacing-h);
     color: var(--links-color);
-    background: var(--background-color);
-    border: 1px solid #e7e9fc;
+    background-color: var(--background-color);
+    border: 1px solid var(--accent-color);
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters-text:hover,
@@ -523,15 +588,50 @@ main {
 }
 
 .projects-item {
+    position: relative;
     width: 360px;
     margin-right: 24px;
     margin-bottom: 48px;
-    border: 1px solid #e7e9fc;
+    border: 1px solid var(--accent-color);
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-item:hover,
 .projects-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.projects-img {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+}
+
+.projects-img::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--links-color);
+    mix-blend-mode: normal;
+    transform: translateY(100%);
+    /* opacity: 0; */
+    transform: translateY(100%);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects-item:hover .projects-img::before,
+.projects-item:focus .projects-img::before {
+    transform: translateY(0);
+    /* opacity: 1; */
 }
 
 .projects-item:nth-child(3n) {
@@ -540,6 +640,27 @@ main {
 
 .projects-item:nth-last-child(-n+3) {
     margin-bottom: 0;
+}
+
+.hidden-text {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: var(--background-color);
+    transition-property: z-index;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects-item:hover .hidden-text,
+.projects-item:focus .hidden-text {
+    z-index: 2;
 }
 
 .projects-card {
@@ -565,4 +686,66 @@ main {
     line-height: var(--line-height-p);
     letter-spacing: var(--letter-spacing-p);
     color: var(--text-color);
+}
+
+
+/* backdrop & modal */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    height: 576px;
+    background-color: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    background-color: var(--accent-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-icon {
+    fill: var(--hero-color);
+}
+
+.close:hover,
+.close:focus {
+    background-color: #404bbf;
+}
+
+.close:hover .close-icon,
+.close:active .close-icon {
+    fill: var(--magic-color);
 }
