One working project item

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,9 +139,9 @@ body {
 
 
 /* .studio:hover::after,
-  .studio:focus::after {
-    display: block;
-  } */
+.studio:focus::after {
+display: block;
+} */
 
 .portfolio {
     color: var(--hover-color);
@@ -161,9 +161,9 @@ body {
 
 
 /* .portfolio:hover::after,
-  .portfolio:focus:after {
-    display: block;
-  } */
+.portfolio:focus:after {
+display: block;
+} */
 
 .nav-item:not(:last-child),
 .address-item:not(:last-child) {
@@ -578,6 +578,9 @@ main {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+
+/******************************* PROJECTS *******************************/
+
 .projects-list {
     display: flex;
     justify-content: center;
@@ -588,11 +591,13 @@ main {
 }
 
 .projects-item {
+    overflow: hidden;
     position: relative;
     width: 360px;
     margin-right: 24px;
     margin-bottom: 48px;
     border: 1px solid var(--accent-color);
+    transform: translatex(0);
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -603,35 +608,36 @@ main {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.projects-img {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-}
-
-.projects-img::before {
-    content: "";
+.projects-item .box .overlay {
     position: absolute;
-    display: inline-block;
-    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--links-color);
-    mix-blend-mode: normal;
-    transform: translateY(100%);
-    /* opacity: 0; */
-    transform: translateY(100%);
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #3f51b5;
+    transform: translatey(100%);
+    transition: transform 250ms ease;
 }
 
-.projects-item:hover .projects-img::before,
-.projects-item:focus .projects-img::before {
-    transform: translateY(0);
-    /* opacity: 1; */
+.box:hover .overlay {
+    transform: translatex(0);
+}
+
+.overlay-text {
+    position: absolute;
+    width: 296px;
+    height: 96px;
+    left: 32px;
+    top: 40px;
+    color: #e5e5e5;
+}
+
+.overlay code {
+    display: inline-block;
+    padding: 2px 4px;
+    border-radius: 2px;
+    background-color: #fff;
+    color: #2a2a2a;
 }
 
 .projects-item:nth-child(3n) {
@@ -640,27 +646,6 @@ main {
 
 .projects-item:nth-last-child(-n+3) {
     margin-bottom: 0;
-}
-
-.hidden-text {
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    padding-top: 40px;
-    padding-left: 32px;
-    padding-right: 32px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    color: var(--background-color);
-    transition-property: z-index;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.projects-item:hover .hidden-text,
-.projects-item:focus .hidden-text {
-    z-index: 2;
 }
 
 .projects-card {
@@ -748,4 +733,13 @@ main {
 .close:hover .close-icon,
 .close:active .close-icon {
     fill: var(--magic-color);
+}
+
+.box {
+    position: relative;
+    width: 360px;
+    height: 300px;
+    margin: 0 auto;
+    background-color: #bdbdbd;
+    overflow: hidden;
 }
