--- a/css/styles.css
+++ b/css/styles.css
@@ -590,7 +590,7 @@ main {
     padding: 0;
 }
 
-.projects-item {
+.project-item {
     overflow: hidden;
     position: relative;
     width: 360px;
@@ -603,12 +603,12 @@ main {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-item:hover,
-.projects-item:focus {
+.project-item:hover,
+.project-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.projects-item .box .overlay {
+.project-item .project-card .overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -619,11 +619,11 @@ main {
     transition: transform 250ms ease;
 }
 
-.box:hover .overlay {
+.project-card:hover .overlay {
     transform: translatex(0);
 }
 
-.overlay-text {
+.project-description {
     position: absolute;
     width: 296px;
     height: 96px;
@@ -640,20 +640,23 @@ main {
     color: #2a2a2a;
 }
 
-.projects-item:nth-child(3n) {
+
+/* blocking */
+
+.project-item:nth-child(3n) {
     margin-right: 0;
 }
 
-.projects-item:nth-last-child(-n+3) {
+.project-item:nth-last-child(-n+3) {
     margin-bottom: 0;
 }
 
-.projects-card {
+.project-info {
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
-.projects-direction {
+.project-title {
     margin-top: 0;
     margin-bottom: 8px;
     padding-left: 16px;
@@ -664,7 +667,7 @@ main {
     color: var(--hero-color);
 }
 
-.projects-text {
+.project-type {
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 16px;
@@ -735,7 +738,7 @@ main {
     fill: var(--magic-color);
 }
 
-.box {
+.project-card {
     position: relative;
     width: 360px;
     height: 300px;
