--- a/css/styles.css
+++ b/css/styles.css
@@ -614,9 +614,10 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #3f51b5;
     transform: translatey(100%);
     transition: transform 250ms ease;
+    background: var(--links-color);
+    mix-blend-mode: normal;
 }
 
 .project-card:hover .overlay {
